feat: 토스 페이먼츠 API 코드 구현

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,13 @@ dependencies {
 
 	// Configuration Processor
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+	// JSON 처리를 위한 의존성
+	implementation 'org.json:json:20230227'
+
+	// Test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
